--- a/PTA_Test/PTA_Test.vcxproj
+++ b/PTA_Test/PTA_Test.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\PTA_Solution\01-复杂度2 Maximum Subsequence Sum.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CF4E068E-6074-4E73-8B5B-F21FC19CA472}</ProjectGuid>
     <RootNamespace>PTA_Test</RootNamespace>
@@ -109,9 +112,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\PTA_Solution\02-线性结构3.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
